refactor language server using typescript

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "engines": {
     "vscode": "^1.68.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://gitee.com/openkylin/cmake-intellisence"
+  },
   "categories": [
     "Programming Languages",
     "Snippets",
@@ -15,7 +19,7 @@
     "onLanguage:cmake",
     "workspaceContains:CMakeLists.txt"
   ],
-  "main": "./out/extension.js",
+  "main": "./client/out/extension",
   "contributes": {
     "grammars": [
       {
@@ -67,7 +71,7 @@
         "path": "./snippets.json"
       }
     ],
-    "configuration":[
+    "configuration": [
       {
         "title": "CMake IntelliSence",
         "properties": {
@@ -107,27 +111,21 @@
     "grammar-cmakecache": "npx js-yaml ./syntaxes/cmakecache.tmLanguage.yml > ./syntaxes/cmakecache.tmLanguage.json",
     "grammar-cmdsignature": "npx js-yaml ./syntaxes/cmdsignature.tmLanguage.yml > ./syntaxes/cmdsignature.tmLanguage.json",
     "grammar": "node ./build/yaml-to-json.mjs",
-    "compile": "npm run grammar && tsc -p ./",
-    "watch": "npm run grammar && tsc -watch -p ./",
+    "compile": "npm run grammar && tsc -b . --verbose",
+    "watch": "npm run grammar && tsc -watch -b . --verbose",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "postinstall": "cd client && npm install && cd ../server && npm install && cd .."
   },
   "devDependencies": {
-    "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "16.x",
-    "@types/vscode": "^1.68.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
-    "@vscode/test-electron": "^2.1.5",
     "eslint": "^8.20.0",
-    "glob": "^8.0.3",
     "js-yaml": "^4.1.0",
     "mocha": "^10.0.0",
-    "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "vscode-languageclient": "^8.0.2"
+    "typescript": "^4.8.4"
   }
 }
