--- a/package.json
+++ b/package.json
@@ -108,6 +108,9 @@
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "npm run grammar && tsc -b . --verbose",
+    "webpack": "webpack --mode development",
+    "webpack-dev": "webpack --mode development --watch",
+    "package": "webpack --mode production --devtool hidden-source-map",
     "watch": "npm run grammar && tsc -watch -b . --verbose",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
@@ -126,6 +129,9 @@
     "eslint": "^8.20.0",
     "js-yaml": "^4.1.0",
     "mocha": "^10.0.0",
-    "typescript": "^4.8.4"
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
