--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,7 @@
         },
         {
             "type": "npm",
-            "script": "webpack",
+            "script": "develop",
             "group": {
                 "kind": "build",
                 "isDefault": true
