--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,11 @@
   },
   "repository": {
     "type": "git",
-    "url":  "https://gitee.com/openkylin/cmake-intellisence"
+    "url": "https://gitee.com/openkylin/cmake-intellisence"
   },
   "dependencies": {
     "vscode-languageserver": "^8.0.2",
-    "vscode-languageserver-textdocument": "^1.0.7"
+    "vscode-languageserver-textdocument": "^1.0.7",
+    "vscode-uri": "^3.0.6"
   }
 }
