--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "url": "https://gitee.com/openkylin/cmake-intellisence"
   },
   "dependencies": {
-    "vscode-languageclient": "^8.0.2"
+    "vscode-languageclient": "^8.0.2",
+    "which": "^3.0.0"
   },
   "devDependencies": {
-    "@types/vscode": "^1.68.0"
+    "@types/vscode": "^1.68.0",
+    "@types/which": "^2.0.1"
   }
 }
