--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "keywords": [
     "KylinIdeDev",
     "KylinIdeDevEdit",
-    "KylinIdeDevC",
+    "KylinIdeDevCYuYan",
     "KylinIdeDevCPlusPlus",
     "KylinIdeDevOtherLanguages"
   ],
