--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "url": "https://gitee.com/openkylin/cmake-intellisence"
   },
   "dependencies": {
-    "antlr4": "^4.13.1-patch-1",
+    "antlr4": "^4.13.2",
     "vscode-languageserver": "^9.0.1",
     "vscode-languageserver-textdocument": "^1.0.11",
     "vscode-uri": "^3.0.8"
