根据上下文信息补全命令和参数

--- a/package.json
+++ b/package.json
@@ -96,13 +96,13 @@
           "cmakeIntelliSence.loggingLevel": {
             "type": "string",
             "enum": [
-              "Off",
-              "Error",
-              "Warnning",
-              "Info",
-              "Debug"
+              "off",
+              "error",
+              "warning",
+              "info",
+              "debug"
             ],
-            "default": "Off",
+            "default": "off",
             "markdownDescription": "%loggingLevel%"
           },
           "cmakeIntelliSence.trace.server": {
