add setting item to configure cmake system module path

--- a/package.json
+++ b/package.json
@@ -88,6 +88,11 @@
             "default": "cmake",
             "description": "%cmakePath%"
           },
+          "cmakeIntelliSence.cmakeModulePath": {
+            "type": "string",
+            "default": "",
+            "description": "%cmakeModulePath%"
+          },
           "cmakeIntelliSence.cmdCaseDiagnostics": {
             "type": "boolean",
             "description": "%cmdCaseDiagnostics%",
