Add unit test for symbol document

--- a/package.json
+++ b/package.json
@@ -130,11 +130,12 @@
   },
   "scripts": {
     "vscode:prepublish": "node -e \"fs.rmSync('dist', {'recursive': true, 'force': true})\" && npm run product",
+    "compile": "tsc -p ./server",
     "develop": "npm run grammar && npm run antlr4 && webpack --mode development --watch",
     "product": "npm run grammar && npm run antlr4 && webpack --mode production --devtool false",
     "pretest": "npm run compile && npm run lint",
-    "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js",
+    "lint": "eslint . --ext ts",
+    "test": "mocha",
     "postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
     "grammar-cmake": "npx js-yaml ./syntaxes/cmake.tmLanguage.yml > ./syntaxes/cmake.tmLanguage.json",
     "grammar-cmakecache": "npx js-yaml ./syntaxes/cmakecache.tmLanguage.yml > ./syntaxes/cmakecache.tmLanguage.json",
@@ -143,14 +144,14 @@
     "antlr4": "cd server/src/antlr && antlr4 -o ../generated/ -visitor -Dlanguage=TypeScript CMakeLexer.g4 && antlr4 -o ../generated/ -visitor -Dlanguage=TypeScript CMakeParser.g4 && antlr4 -o ../generated/ -Dlanguage=TypeScript CMakeSimpleLexer.g4 && antlr4 -o ../generated/ -Dlanguage=TypeScript CMakeSimpleParser.g4"
   },
   "devDependencies": {
-    "@types/mocha": "^10.0.6",
+    "@types/mocha": "^10.0.10",
     "@types/node": "18.x",
     "@types/which": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "eslint": "^8.57.0",
     "js-yaml": "^4.1.0",
-    "mocha": "^10.4.0",
+    "mocha": "^11.0.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.91.0",
